# TLibraries

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  cmake_install.cmake  main.cpp
cmake/: FinddevkitBase.cmake
include/: AssetsManage.h  LeeCallback.hpp  LeeContainer.h  LeeDataBase.h  LeeFtpsvc.h  LeeInfo.h  LeeMacro.h  TConfiguration.cpp  TConfiguration.h  callbackTutorial.hpp  lPublic.h
lib/: CMakeLists.txt  TLibraries.lib  cmakelib.cpp
src/: AssetsManage.cpp  CMakeLists.txt  LeeDataBase.cpp  LeeFtpsvc.cpp  LeeInfo.cpp  TConfigurations.json  lPublic.cpp  main.cpp
test/: CMakeLists.txt
