cmake_minimum_required(VERSION 3.0.0)
project(TLibraries VERSION 0.1.0)
# add_executable(TLibraries main.cpp)

# add_subdirectory(src)
# add_subdirectory(lib)
# add_subdirectory(devkitBase)
# include_directories(src)
# include_directories(include)
# include_directories("${PROJECT_NAME}/devkitBase/include")
# #link_directories("C:/Program Files/Autodesk/Maya2019/lib")
# #add_library(Foundation.lib OpenMaya.lib OpenMayaUI.lib OpenMayaAnim.lib Qt5Core.lib Qt5Widgets.lib Qt5Gui.lib Qt5Network.lib)
# #target_link_directories()

# set(MYVAR ${MAYA_INCLUDE})
# function(print MYVAR)
# message("${var}=${${var}}")
# message("${ARGN}")
# message("${ARGC}")
# message("${ARGV0}")
# endfunction()